[build-system]
requires = ["setuptools >= 40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "pkgconfig"
version = "1.5.1"
license = "MIT"
description = "Interface Python with pkg-config"
authors = ["Matthias Vogelgesang <matthias.vogelgesang@gmail.com>"]
readme = "README.rst"
homepage = "https://github.com/matze/pkgconfig"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Build Tools",
]

[tool.poetry.dependencies]
python = "~2.7 || ^3.3"

[tool.poetry.dev-dependencies]
pytest = "^3.8.2"
